--- a/templates/store/category_products.html
+++ b/templates/store/category_products.html
@@ -97,7 +97,7 @@
                 <div class="row mb-3 align-items-center">
                   <div class="col-lg-6 mb-2 mb-lg-0">
 {#                      Todo add count of results#}
-                    <p class="text-small text-muted mb-0">Показано 1–12 із 53 результатів</p>
+                    <p class="text-small text-muted mb-0">Показано 1–12 із {{ count_of_products }} результатів</p>
                   </div>
                   <div class="col-lg-6">
                     <ul class="list-inline d-flex align-items-center justify-content-lg-end mb-0">
