--- a/templates/store/main.html
+++ b/templates/store/main.html
@@ -10,29 +10,31 @@
             <div class="row">
                 <div class="col-md-8">
                     <div itemprop="text">
-                        <p class="p-light-grey-text">Жизнь современного человека сложно представить без спорта и
-                            велосипеда. А последние представлены на просторах магазинов в таком разнообразии,что можно
-                            подобрать на любой вкус и кошелек. Однако, для этого важно знать, как выбрать велосипед. В
-                            этой статье мы постараемся ответить на этот непростой вопрос.</p>
-                        <p class="p-main-header">Чтобы выбрать велосипед вам нужно знать:</p>
-                        <ul class="ul-nice">
-                            <li>Стиль катания - город или бездорожье.</li>
-                            <li>Бюджет - обычно чем больше, тем лучше.</li>
-                            <li>Ваш рост и вес - от этого зависит размер рамы велосипеда.</li>
-                        </ul>
-                        <p class="p-main-header">Вопрос первый. Ваш стиль катания.</p>
-                        <p class="p-light-grey-text">Первым и самым важным является среда обитания<br>вашего железного
-                            коня, т.е. где будете ездить на нем?</p>
-                        <h2>1 Горние велосипеды</h2>
-                        <p>Если же вы хотите один байк на все случаи жизни, то ваш путь лежит в самую многочисленную
-                            категорию горных велосипедов. Несмотря на название, эти байки хороши не только в горах.
-                            Засчет
-                            широких покрышек (как правило, от 2”) на этом велосипеде комфортно ездить как по
-                            грунтовым дорогам, так и по асфальтированным, благо качество последних у нас не сильно
-                            отличается от первых ;) Также широкие покрышки имеют и высокий профиль, который служит
-                            дополнительной амортизирующей подвеской.</p>
+                        <p class="p-light-grey-text">Життя сучасної людини складно уявити без спорту та
+                            велосипед. А останні представлені на просторах магазинів у такій різноманітності, що можна
+                            підібрати на будь-який смак та гаманець. Однак для цього важливо знати, як вибрати
+                            велосипед. У
+                            цій статті ми намагатимемося відповісти на це непросте запитання.</p>
+                        <p class="aleart">
+                            <p class="p-main-header">Щоб вибрати велосипед, вам потрібно знати:</p>
+                            <ul class="ul-nice">
+                                <li>Стиль катання - місто чи бездоріжжя.</li>
+                                <li>Бюджет зазвичай чим більше, тим краще.</li>
+                                <li>Ваш phscn і ваг - від цього залежить розмір рами велосипеда.</li>
+                            </ul>
+                        </p>
+                        <p class=“p-main-header”>Перше питання. Ваш стиль катання.</p>
+                        <p class=“p-light-grey-text”>Першим і найважливішим є середовище проживання<br>вашого залізного
+                            коня, тобто де ви будете їздити на ньому?</p>
+                        <h2>1 Гірські велосипеди</h2>
+                        <p>Якщо ж ви хочете один байк на всі випадки життя, то ваш шлях лежить у найбільш численну
+                            категорію гірських велосипедів. Незважаючи на назву, ці байки хороші не тільки у горах.
+                            Завдяки широким шинам (як правило, від 2”) на цьому велосипеді комфортно їздити як по
+                            грунтових дорогах, так і по асфальтованим, благо якість останніх у нас не дуже відрізняється
+                            від перших ;) Також широкие покрышки мають і високий профиль, який служить додатковою
+                            амортизуючою пiдвiскою.</p>
                         <div class="image-diameter">
-                            <p>Среди горных велосипедов водоразделом служит диаметр колес</p>
+                            <p>Серед гірських велосипедів вододілом служить діаметр коліс</p>
                             <ul>
                                 <li>29"</li>
                                 <li>27,5"</li>
@@ -40,18 +42,18 @@
                             </ul>
                         </div>
                         <div class="container">
-                        <img src="https://bikeart.com.ua/wa-data/public/shop/products/22/00/22/images/562/562.650@2x.jpg"
-                             class="img-fluid" alt="">
+                            <img src="https://bikeart.com.ua/wa-data/public/shop/products/22/00/22/images/562/562.650@2x.jpg"
+                                 class="img-fluid" alt="">
                         </div>
-                        <p>Уже уходящий в историю размер 26” представлен крайне слабо и почти полностью перекочевал в
-                            разряд подростковых. Поэтому рекомендуем на него обращать внимание, если вы любите раритет и
-                            артефакты старины. Следующим размером колес является 27.5”. Рекомендуем эти колеса тем, чей
-                            рост не превышает отметки в 175 см. Для всех же остальных (от 175 и выше) – найнеры –
-                            велосипеды с колесами 29”.</p>
-                        <h2>2 Двухподвесы</h2>
-                        <p>Еще одним дифференцирующим признаком горных велосипедов является амортизация: горные байки
-                            бывают хардтейлами (только амортизационная вилка) и двухподвесами (кроме вилки есть еще и
-                            задний амортизатор).</p>
+                        <p>Вже відходячий у історію розмір 26” представлений крайне слабо і майже повністю перекочував у
+                            розряд підросткових. Тому рекомендуємо на нього звертати увагу, якщо ви любите раритет і
+                            артефакти старовини. Наступним розміром колес є 27.5”. Рекомендуємо ці колеса тим, чий зріст
+                            не перевищує позначки в 175 см. Для всіх же інших (від 175 і вище) – найнери – велосипеди з
+                            колесами 29”.</p>
+                        <h2>2 Двопiдвiски</h2>
+                        <p>Ще одним диференційованим ознакою горних велосипедів є амортизація: горнi байки бувають
+                            хардтейлами (тiльки амортизацiйна вилка) та двопiдвiсками (окрiм вилки є ще й задний
+                            амортизатор).</p>
                         <p>
                         <div class="row">
                             <!-- <div class="cell al-center"><img src="files/2020/07_07/11_48/u_files_store_31_162959.jpg"
@@ -61,59 +63,58 @@
                                     alt="Двухподвес"/>
                             </div>
                             </p>
-                            <p>Безусловно, двухподвесы удобнее и комфортнее в ходу, а также позволяют проехать там,
-                                где хардтейл «скозлит» райдера. Полноподвесная амортизация кроме комфорта
-                                обеспечивает еще и отличное сцепление с трассой. Именно благодаря ей двухподвесы
-                                чувствуют себя уверенно даже там, где нет дороги, а есть лишь направление. При этом
-                                хардтейлы легки в ходу и эффективнее передают энергию педалирования в скорость.</p>
-                            <h2>3 Городские и туристические велосипеды</h2>
-                            <p>Если же велосипед нужен для повседневных бытовых нужд (поездка на работу, за
-                                продуктами и пр.), то стоит выбирать городской велосипед на дорожных покрышках
-                                (ширина от 1.1” до 1.75” и диаметром 28”), с багажником и/или корзиной, крыльями и
-                                подножкой. Или с возможностью установки всех этих аксессуаров.</p>
+                            <p>Безумовно, двопiдвiски зручніше та комфортніше в ходу, а також дозволяють проїхати там,
+                                де хардтейл «скозлить» райдера. Повнопiдвiсна амортизація крім комфорту забезпечує ще й
+                                відмінне зчеплення з трасою. Саме завдяки їй двопiдвiски почувають себе впевнено навіть
+                                там, де немає дороги, а є лише напрямок. При цьому хардтейли легкі в ходу та ефективніше
+                                передають енергію педалювання у швидкість.</p>
+                            <h2>3 Міські та туристичні велосипеди</h2>
+                            <p>Якщо ж велосипед потрібен для повсякденних побутових потреб (поїздка на роботу, за
+                                продуктами і пр.), то варто обирати міський велосипед на дорожних покришках (ширина від
+                                1.1” до 1.75” і діаметром 28”), з багажником та/або кошиком, крилами і пiдставкою. Або з
+                                можливостью установки всiх цих аксесуарiв.</p>
                             <p>
                             <div class="topic-info">
-                                <img src={% static "img/city_bike.jpg" %}
+                                <img src={% static "img/city_bike.jpg" %},
                                      alt="Городской велосипед">
                             </div>
                             </p>
-                            <h2>4 Электровелосипеды</h2>
-                            <p>Новейшей тенденцией велоиндустрии стали электровелосипеды. Это новый виток эволюции
-                                велосипеда, которая позволяет проехать райдеру дальше, а тренировки сделать
-                                эффективнее. Ассистирующие электромоторы, которые не крутят вместо вас, но лишь
-                                помогают по одной из выбранных программ. Позволяют преодолевать перепады ландшафта
-                                без моральных потерь, получая наслаждение и сохраняя пульс в аэробных пределах. Все,
-                                что касалось обычных велосипедов, касается и электробайков. С той лишь разницей, что
-                                электромотор существенно расширяет возможности райдера, однако и стоят такие
-                                велосипеды дороже. Но о цене поговорим позже.</p>
+                            <h2>4 Електровелосипеди</h2>
+                            <p>Найновішою тенденцією велоіндустрії стали електровелосипеди. Це новий виток еволюції
+                                велосипеда, яка дозволяє проїхати райдеру далі, а тренування зробити ефективнішими.
+                                Асистуючі електромотори, які не крутять замість вас, а лише допомагають за однiєю з
+                                обраних програм. Дозволяють подолати перепади ландшафту без моральних втрат, отримуючи
+                                задоволення та зберiгаючи пульс у аеробних межах. Все, що стосувалось звичайних
+                                велосипедiв, стосується і електробайкiв. З тiєю лише рiзницею, що електромотор iстотно
+                                розширяє можливостi райдера, однак такi велосипеди коштують дорожче. Але про цiну
+                                поговоримо пiзнiше.</p>
                             <p><img src="https://ebike.in.ua/wp-content/uploads/2021/04/IMG_4325.jpg"
                                     alt="Электровелосипеды"/>
                             </p>
-                            <p class="p-warning">Не стоит думать, что электровелосипед – это просто байк с мотором.
-                                Конечно, в бюджетном сегменте только такие и представлены, однако все брендовые
-                                велосипеды – это технологически совершенные байки, которые способны сделать
-                                спортсмена сильнее, а при спешке на работу - успеть, и не вспотеть.</p>
-                            <h2>5 Шоссейные велосипеды</h2>
-                            <p>Если вы хотите скоростии вам важна постоянная и равномерная кардионагрузка, то здесь
-                                лучше шоссера вам ничего не подойдет.</p>
+                            <p class=“p-warning”>Не варто думати, що електровелосипед – це просто байк з мотором.
+                                Звичайно, у бюджетному сегменті тільки такі й представлені, однак усі брендові
+                                велосипеди – це технологічно досконалі байки, які здатні зробити спортсмена сильнiшим, а
+                                при поспiшцi на роботу - встигнути і не спiтнiти.</p>
+                            <h2>5 Шосейнi велосипеди</h2>
+                            <p>Якщо ви хочете швидкостii вам важлива постiйна i рiвномiрна кардionагрузка, то тут краще
+                                шосейника вам нiчого не пiдiйде.</p>
                             <p><img src="https://images.prom.ua/3347772624_shosejnij-velosiped-crosser.jpg"
                                     alt="Шоссейные велосипеды"/>
                             </p>
-                            <p class="p-border-yellow"><b>Лайфхак:</b> любой шоссер проигрывает на грунтах горняку,
-                                а любой горняк не сравнится с шоссером на асфальте.</p>
-                            <h2>6 Кроссовые или гибридные велосипеды</h2>
-                            <p>Однако, следует понимать, что шоссейный велосипед не подойдет для езды по грунтовым
-                                тропкам. Отсутствие амортизации и узкие покрышки растрясут все желание ездить. Для
-                                таких целей есть кроссовые или гибридные велосипеды. Они обладают большей
-                                проходимостью, хоть и уступают шоссейникам в скорости.</p>
+                            <p class=“p-border-yellow”><b>Лайфхак:</b> будь-який шосейник програє на грунтах гірняку, а
+                                будь-який гірняк не порівняється з шосейником на асфальті.</p>
+                            <h2>6 Кросовi або гiбриднi велосипеди</h2>
+                            <p>Однак, слiд розумiти, що шосейний велосипед не пiдiйде для їзди по грунтовим стежкам.
+                                Вiдсутнiсть амортизацii та вузькi покришки розтрясуть усе бажання їздити. Для таких
+                                цілей є кросові або гібридні велосипеди. Вони мають більшу прохідність, хоч і
+                                поступаються шосейникам у швидкості.</p>
                             <p>
                                 <img src="https://velosvit.net/wp-content/uploads/2019/07/AUTHOR-Profile-II-26-cvet-belo-cherno-sinij-rama-15-1024x768.jpg"
                                      alt="Кроссовые или гибридные велосипеды"/>
                             </p>
-                            <h2>7 Велосипеды BMX, для дёрта и триала</h2>
-                            <p>Любителям пощекотать нервы следует смотреть в сторону BMX, стрит, дертовых байков.
-                                Они собраны на усиленных рамах и комплектующих, на которых просто не захочется ехать
-                                прямо.</p>
+                            <h2>7 Велосипеди BMX, для дерта та триала</h2>
+                            <p>Любителям пощекотати нерви слід дивитися в бік BMX, стриту, дертових байків. Вони зібрані
+                                на посилених рамах та комплектуючих, на яких просто не захочеться їхати прямо.</p>
                             <p>
                                 <img src="https://velobikelviv.com/wp-content/uploads/2020/10/FIEND_MY2020_TYPEA__BLK_2000x.jpg"
                                      alt="Велосипеды BMX, для дёрта и триала"/>
@@ -121,25 +122,24 @@
                             <p>
                             </p>
                             </p>
-                            <p class="p-main-header">Вопрос второй. Размер рамы.</p>
-                            <p>Пропорции тела у нас разные, поэтому и носим разные размеры одежды, и по-разному
-                                отодвигаем кресло в автомобиле. Велосипед также неразрывно связан с нашим телом, а
-                                значит он также должен быть правильного размера. И если вы высоту рамы можно
-                                компенсировать подседельным штырем, высунув его сильнее, или, наоборот, спрятав
-                                поглубже. То длина рамы – константная величина, которую компенсировать крайне
-                                сложно.</p>
-                            <p class="aleart"><b>Внимание:</b> при выборе размера всегда ориентируйтесь только
-                                на свой рост. При заказе мы сами профессионально скорректируем размер вашего
-                                велосипеда для вашего комфорта и безопасности.</p>
+                            <p class=“p-main-header”>Питання друге. Розмір рами.</p>
+                            <p>Пропорції тіла у нас різні, тому й носимо різні розміри одягу, і по-різному відсуваємо
+                                крісло в автомобілі. Велосипед також нерозривно пов’язаний з нашим тілом, а значить вiн
+                                також повинен бути правильного розмiру. І якщо висоту рами можна компенсувати
+                                пiдсидiльним штирем, висунувши його сильнiше або навпаки спрятавши поглибше. То довжина
+                                рами – константна величина, яку компенсувати крайне складно.</p>
+                            <p class=“aleart”><b>Увага:</b> при виборi розмiру завжди орiентуйтесь тiльки на свiй зрост.
+                                При замовленнi ми самостийно професiйно скоригуємо розмiр вашого велосипеда для вашого
+                                комфорту i безпеки.</p>
                             <br><br>
                             <div class="container">
                                 <table class="table table-striped">
                                     <thead class="thead-dark">
                                     <tr class="text-center">
-                                        <th scope="col">Размер рамы, дюймы</th>
-                                        <th scope="col">Ваш рост, см</th>
-                                        <th scope="col">Размер рамы, см</th>
-                                        <th scope="col">Размер рамы, условные. ед</th>
+                                        <th scope=“col”>Розмір рами, дюйми</th>
+                                        <th scope=“col”>Ваш зріст, см</th>
+                                        <th scope=“col”>Розмір рами, см</th>
+                                        <th scope=“col”>Розмір рами, умовні. од</th>
                                     </tr>
                                     </thead>
                                     <tbody>
