--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,7 @@
 /*Todo place for 1 big advertising(Реклама)*/
-body {
-    background-image: url("../img/img_5.png");
-}
+/*body {*/
+/*    background-image: url("../img/img.png");*/
+/*}*/
 img {
    width: 75%;
    display: block;
