--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,12 +4,12 @@
     <link href="{% static 'css/header.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 
-<header class="header_img">
-    <div class="header-container">
-    <img src="../static/img/header2.png" alt="Header Image" class="header-image">
-    <h1 class="header-title">WellBike</h1>
-  </div>
-</header>
+{#<header class="header_img">#}
+{#    <div class="header-container">#}
+{#    <img src="../static/img/header2.png" alt="Header Image" class="header-image">#}
+{#    <h1 class="header-title">WellBike</h1>#}
+{#  </div>#}
+{#</header>#}
 <!-- navbar-->
 <header class="header bg-white">
     <div class="container px-0 px-lg-3">
@@ -73,7 +73,7 @@
                         </li>
                     {% else %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'store:login' %}">Ввійти</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'store:register' %}">Створити анкаунт</a>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'store:register' %}">Створити акаунт</a>
                         </li>
                     {% endif %}
                 </ul>
